--- a/src/app/modulos/gerador-de-pessoas/dialogs/pessoa-dados-pessoais/dados-pessoais-dialog/dados-pessoais-dialog.component.html
+++ b/src/app/modulos/gerador-de-pessoas/dialogs/pessoa-dados-pessoais/dados-pessoais-dialog/dados-pessoais-dialog.component.html
@@ -1,4 +1,10 @@
-<p-dialog header="Title" [(visible)]="display">
-  Content
+<p-dialog
+  header="Dados Pessoais"
+  [(visible)]="ativarModal"
+  [modal]="true"
+  [responsive]="true"
+  [closable]="true"
+>
+  <h1 class="modal">Dados Pessoais</h1>
+  <button pButton label="Fechar Modal" (click)="fecharModal()"></button>
 </p-dialog>
-
