implermentando modal dialog

--- a/src/app/modulos/gerador-de-pessoas/dialogs/pessoa-dados-pessoais/dados-pessoais-dialog/dados-pessoais-dialog.component.html
+++ b/src/app/modulos/gerador-de-pessoas/dialogs/pessoa-dados-pessoais/dados-pessoais-dialog/dados-pessoais-dialog.component.html
@@ -6,5 +6,5 @@
   [closable]="true"
 >
   <h1 class="modal">Dados Pessoais</h1>
-  <button pButton label="Fechar Modal" (click)="fecharModal()"></button>
+  <button pButton label="Fechar Modal" (click)="fechar()"></button>
 </p-dialog>
