--- a/src/app/modulos/gerador-de-pessoas/fomulario-gerador-de-pessoas/fomulario-gerador-de-pessoas.component.html
+++ b/src/app/modulos/gerador-de-pessoas/fomulario-gerador-de-pessoas/fomulario-gerador-de-pessoas.component.html
@@ -1,5 +1,5 @@
 <button pButton label="Abrir Modal" (click)="abrirModal()"></button>
 
 <app-dados-pessoais-dialog
-  [ativarModal]="exibirDadosPessoaisDialog"
+  [ativarModal]="exibirDadosPessoaisDialog" (fecharModal)="fecharModal()"
 ></app-dados-pessoais-dialog>
